--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-av": "~15.0.2",
     "expo-document-picker": "^13.0.3",
     "expo-image-picker": "^16.0.6",
+    "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "react": "18.3.1",
